add new files created

--- a/sign.html
+++ b/sign.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>forms</title>
+    <link rel="stylesheet" href="css/sign.css">
+    <title>cool cats</title>
 </head>
 
 <body>
@@ -14,22 +14,28 @@
         <h1>COOL CATS</h1>
         <div class="forms">
             <div class="photo">
-                <img src="/cat.jpg" alt="" height="500" width="500">
+                <img src="/cool.jpeg" alt="" height="500" width="500">
             </div>
             <form action="">
-                <h2 id="logIn">Sign In</h2>
+                <h2 id="logIn">Sign Up</h2>
 
                 <div id="form-input">
                     <div class="label">
-                        <label for="">Username:</label>
-                        <input type="text" class="input" >
+                        <label for="">Firstname:</label>
+                        <input type="text" class="input">
+
+                    </div>
+
+                    <div class="label">
+                        <label for="">Laststname:</label>
+                        <input type="text" class="input">
 
                     </div>
 
 
                     <div class="label">
                         <label for="">Email:</label>
-                        <input type="email" class="input" >
+                        <input type="email" class="input">
 
                     </div>
 
@@ -39,16 +45,23 @@
                         <input type="text" class="input">
 
                     </div>
+                    <div class="label">
+                        <label for=""> Confirm Password:</label>
+                        <input type="text" class="input">
+
+                    </div>
+
 
                 </div>
                 <button class="btn" type="submit">Sign In</button>
 
-                <h3>Don't have an account? <a href="sign.html">Sign Up</a></h3>
+                <h3>Already have an account? <a href="index.html">Sign In</a></h3>
 
             </form>
         </div>
 
     </div>
+
 </body>
 
 </html>
