add changes made to sign.html

--- a/sign.html
+++ b/sign.html
@@ -53,7 +53,7 @@
 
 
                 </div>
-                <button class="btn" type="submit">Sign In</button>
+                <button class="btn" type="submit">Sign Up</button>
 
                 <h3>Already have an account? <a href="index.html">Sign In</a></h3>
 
