add photos added

--- a/sign.html
+++ b/sign.html
@@ -21,13 +21,13 @@
 
                 <div id="form-input">
                     <div class="label">
-                        <label for="">Firstname:</label>
+                        <label for="">FirstName:</label>
                         <input type="text" class="input">
 
                     </div>
 
                     <div class="label">
-                        <label for="">Laststname:</label>
+                        <label for="">LastName:</label>
                         <input type="text" class="input">
 
                     </div>
